MyPL/tests/negative/err_arity_mismatch.logic
# Negative: parent/2 declared, but query uses parent/1.
# Parses fine, proof should fail (false).
parent(bat, bold).
?- parent(bat).
